# infinite-crew

./: .dockerignore  .env.example  .env.template  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml  requirements.txt
.github/workflows/: docker-build.yml  test.yml
docs/: API.md  DEPLOYMENT.md
examples/: complex_mission.py  simple_task.py
master/: Dockerfile  main.py
scripts/: deploy.sh  init.sql  local-dev.sh  test-local.sh
tests/: test_connections.py  test_decomposition.py
ui/: Dockerfile  app.py
worker/: worker.py
